# weather-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  bot_logs.ps1  dashboard.py  eda.py  main.py  orderbook_bot.py  pnl.py  pyproject.toml  requirements.txt  script.md  start_bot.ps1  stop_bot.ps1  test.py  test_markets.py  weather_markets.csv  weatherbet.py  weatherbot.service
memory/: index.md  log.md
memory/.obsidian/: workspace.json
memory/bot_changes/: 2026-04-04_expand_city_blacklist.md  2026-04-04_risk_and_filter_improvements.md  2026-04-05_reduce_churn_and_tighten_filters.md  2026-04-05_revert_max_positions_to_10.md  2026-04-09_probability_model_overhaul.md  2026-04-14_ladder_strategy.md
memory/insights/: city_edge_not_uniform.md  hold_to_resolution_strategy.md  ladder_beats_single_bucket.md  probability_model_was_overconfident.md  stop_loss_kills_edge.md  thin_price_spread_cost.md
memory/strategies/: improvement_roadmap.md
memory/templates/: bot_change_log.md  trade_log.md
src/orderbook/: execution.py  hawkes.py  hedger.py  kyle_model.py  market_maker.py  monte_carlo.py  vpin.py
src/pipeline/: clean.py  eda.py  features.py  fetch.py
src/weatherbot/: backfill.py  bot.py  config.json  config.py  execution.py  forecast.py  polymarket.py  portfolio.py  telegram_bot.py  weatherbet.py
tests/: test_forecast.py  test_munich_live.py  test_polymarket.py  test_portfolio.py  test_weatherbet.py
