[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket resolved-market ML data pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "ipykernel>=6.29",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weatherbot"]

[project.scripts]
polymarket-pipeline = "main:main"
weatherbot = "weatherbot.weatherbet:main"
